new about page and fixes

--- a/src/content/blog/rest-vs-graphql.mdx
+++ b/src/content/blog/rest-vs-graphql.mdx
@@ -2,7 +2,7 @@
 title: 'Understanding API Design: REST vs GraphQL'
 description: 'A practical comparison of REST and GraphQL with interactive examples'
 pubDate: 'Feb 01 2026'
-heroImage: '../../assets/blog-placeholder-2.jpg'
+heroImage: '../../assets/blog-2.jpg'
 ---
 
 When designing APIs for modern web applications, developers often face the decision between **REST** and **GraphQL**. Let's dive deep into both approaches and understand when to use each.
